Cleanup in statement.js. Moved quick tips to help.htm. Added quick design idea for efficient selection of relevant menu items to context_menu.js. Tidied up visual_editor.js with short functions and added untested code to set up Initialisation and Implementation. Moved help style to container DIV, Added style for implementation and initialization and 'editor loading' dialog. Moved js to bottom of page in visual_editor.htm. Commented out the help iframe here as it's stopping any javascript-related happenings below it. Editor now only visible once all DOM stuff is in order and main menu is completely loaded. Help doesn't automatically open in new page because that's not valid HTML 4. ifthenelse can be passed a config object which tells it where to insert iteslf, if given. Now that's a long commit message!

--- a/visual/visual_editor.css
+++ b/visual/visual_editor.css
@@ -26,7 +26,7 @@
 	background-color:white;
 	visibility:	hidden;
 }
-#VE-help-iframe {
+#VE-help-container {
 	position:	absolute;
 	top:		23px;
 	width:		100%;
@@ -49,4 +49,53 @@
 	right:		0px;
 	border:		1px solid black;
 	text-align:	center
+}
+#VE-loading-msg {
+	position:	relative;
+	left:		-50%;
+	float:		left;
+	background-color:#ffff88;
+	border:		2px solid #99ccff;
+	height:		3em;
+	line-height:3em;
+	padding:	8px;
+}
+#VE-loading-msg-centering {
+	position:	fixed;
+	left:		50%;
+	top:		30px;
+	float:		left;
+}
+#initialization {
+	position:	relative;
+	border:		1px solid black;
+	float:		left;
+	clear:		both;
+	margin-top:	1em;
+	padding-top:	1em;
+}
+#implementation {
+	position:	relative;
+	border:		1px solid black;
+	float:		left;
+	clear:		both;
+	margin-top:	1em;
+	padding-top:	1em;
+}
+#initialization-title {
+	background-color:	white;
+	position:	absolute;
+	top:		-0.5em;
+	font-size:	1em;
+	line-height:1em;
+	left:		5px;
+}
+#implementation-title {
+	background-color:	white;
+	position:	absolute;
+	top:		-0.5em;
+	font-size:	1em;
+	line-height:1em;
+	left:		5px;
+}
 }
